src/App.scss
@charset "utf-8";

@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');

$family-sans-serif: 'Nunito', sans-serif;
$dimensions: 16 24 32 48 64 96 128 256 512 !default;
$bottom-border-height: 2px;
$default-transition-speed: 0.1s;
$underline-speed: 0.4s;

// colors
$default-text-color: hsl(0, 0%, 21%);
$link-color: #ff9800;
$primary: hsl(171, 100%, 41%);
$info: hsl(204, 86%, 53%);
$link: hsl(217, 71%, 53%);
$black: #000;
$red: hsl(348, 100%, 61%);
$grey-light: hsl(0, 0%, 71%);
$git-color: $red;
$linkedin-color: $info;

$highlight-size: 2px;

.navbar-item {
  position: relative;
  display: inline-block;
  border-radius: 0px !important;
}

.navbar-module {
  width: 0.01%;
  border-bottom: $bottom-border-height solid $primary;
  transition-duration: $underline-speed;
  transition-property: width;
}

.navbar-module:hover,
.navbar-module.active {
  width: 100%;
  transition-duration: $underline-speed;
  transition-property: width;
}

.footer-link {
  background: linear-gradient(
    to bottom,
    lighten($link-color, 35%),
    lighten($link-color, 35%) 100%
  );
}

.github-link {
  background: linear-gradient(
    to bottom,
    lighten($git-color, 30%),
    lighten($git-color, 30%) 100%
  );
}

.linkedin-link {
  background: linear-gradient(
    to bottom,
    lighten($linkedin-color, 30%),
    lighten($linkedin-color, 30%) 100%
  );
}

.home-link {
  background: linear-gradient(
    to bottom,
    lighten($primary, 45%),
    lighten($primary, 45%) 100%
  );
}

.social-link {
  cursor: pointer;
  border-radius: 0px;
  padding: $highlight-size;
  margin: -$highlight-size;
  color: $default-text-color;
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 4px 3px;
  text-decoration: none;
  transition-duration: $default-transition-speed;
  transition-property: background-size, border-radius, color;
  transition-timing-function: ease-in-out;
}

.social-link.github-link:hover {
  border-radius: 5px;
  color: $git-color;
  background-size: 4px 100%;
}

.social-link.linkedin-link:hover {
  border-radius: 5px;
  color: $linkedin-color;
  background-size: 4px 100%;
}

.social-link.footer-link:hover {
  border-radius: 5px;
  color: $link-color;
  background-size: 4px 100%;
}

.social-link.home-link:hover {
  border-radius: 5px;
  color: $primary;
  background-size: 4px 100%;
}

// Add a drop shadow to profile picture
.image-module {
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
}

.cookie-module {
  left: 0;
  right: 0;
  position: fixed !important;
}
@import '../node_modules/bulma/bulma.sass';

